# srt-to-vtt-cl

./: CMakeLists.txt
.github/workflows/: release.yml  test.yml
src/: CMakeLists.txt  main.cpp
